k8s/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uat
  name: lz-node-application
  labels:
    name: lz-node-application
    app: lz-node-application
spec:
  selector:
    matchLabels:
      app: lz-node-application
  template:
    metadata:
      name: lz-node-application
      labels:
        name: lz-node-application
        app: lz-node-application
    spec:
      containers:
        - name: lz-node-application
          imagePullPolicy: Always
          image: sevenskies/lz-node-application:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/uploads
              name: uploads-storage
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
