k8s/uat/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: waondo-backend
  namespace: uat
  labels:
    app: waondo-node-backend
    name: waondo-node-backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: waondo-node-backend
    name: waondo-node-backend
